--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <title>My Youtube</title>
+        <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="src/style/style.css">
     </head>
     <body>
-        <div id="container">
+        <div id="container" class="container">
         </div>
         <script src="/bundle.js"></script>
     </body>
